--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WorkshopContext": "Data Source=WorkshopContext-ec53b6df-87d4-42af-b679-9e27b8048b8f.db"
+  }
 }
