--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WorkshopContext": "Data Source=WorkshopContext-ec53b6df-87d4-42af-b679-9e27b8048b8f.db"
+    "WorkshopContext": "Data Source=DESKTOP-P78QF9L\\SQLEXPRESS;Initial Catalog=WorkshopDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
